# rffm_parser

./: .gitignore  .replit  bot_telegram.py  bot_telegram_png.py  clasificacion.py  cuartos.py  dict2excel.py  dict2png.py  dict2text.py  dict_calendario.py  dict_clasificacion.py  dict_coeficiente.py  dict_cuartos.py  dict_horarios.py  dict_infantiles.py  dict_resultados.py  dict_seguidos.py  dockerfile  excel_dict.py  horarios.py  infantiles.py  main.py  png_dict.py  print_dict.py  pyproject.toml  requirements.txt  resultados.py  text_clasificacion.py  text_cuartos.py  text_dict.py  text_horario.py  text_infantiles.py  text_resultados.py  variables.py  variables_2324.py  ver_calendario.py  ver_clasificacion.py  ver_coeficiente.py  ver_cuartos.py  ver_horarios.py  (+5 more)
