[tool.poetry]
name = "repl-nix-rffmparser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_rffmparser"}]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.12.3"
pytelegrambotapi = "^4.16.1"
dataframe-image = "^0.2.3"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
